force-app/main/default/objects/Tournament_Team__c/Tournament_Team__c.object-meta.xml
<CustomObject>
    <label>Tournament Team</label>
    <pluralLabel>Tournament Teams</pluralLabel>
    <nameField>
        <displayFormat>TT-{0000}</displayFormat>
        <label>Tournament Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Junction for tournament participation</description>
</CustomObject>