force-app/main/default/objects/Tournament_Team__c/fields/Goals_Against__c.field-meta.xml
<CustomField>
    <fullName>Goals_Against__c</fullName>
    <label>Goals Against</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total goals against in tournament</description>
</CustomField>