force-app/main/default/objects/Tournament_Team__c/fields/Goals_For__c.field-meta.xml
<CustomField>
    <fullName>Goals_For__c</fullName>
    <label>Goals For</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total goals scored in tournament</description>
</CustomField>