force-app/main/default/objects/Tournament_Team__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <label>Pool</label>
    <type>Text</type>
    <length>50</length>
    <description>Pool assignment (e.g., Pool A, Pool B)</description>
</CustomField>