force-app/main/default/objects/Tournament_Team__c/fields/Standing__c.field-meta.xml
<CustomField>
    <fullName>Standing__c</fullName>
    <label>Standing</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Current standing/ranking in tournament</description>
</CustomField>