force-app/main/default/objects/Tournament_Team__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Lookup</type>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Tournament Teams</relationshipLabel>
    <relationshipName>Tournament_Teams</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team participating in the tournament</description>
</CustomField>