force-app/main/default/objects/Tournament_Team__c/fields/Ties__c.field-meta.xml
<CustomField>
    <fullName>Ties__c</fullName>
    <label>Ties</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of ties in tournament</description>
</CustomField>