force-app/main/default/objects/Tournament_Team__c/fields/Tournament__c.field-meta.xml
<CustomField>
    <fullName>Tournament__c</fullName>
    <label>Tournament</label>
    <type>Lookup</type>
    <referenceTo>Tournament__c</referenceTo>
    <relationshipLabel>Tournament Teams</relationshipLabel>
    <relationshipName>Tournament_Teams</relationshipName>
    <required>true</required>
    <description>The tournament this team is participating in</description>
</CustomField>